[B][COLOR gold]v4.00.27[/COLOR][/B]
- Fixed "Find similar" list backing out to add-on's initial menu

[B][COLOR gold]v4.00.26[/COLOR][/B]
- IMDb lists tweaks/fixes
- Various API requests alterations

[B][COLOR gold]v4.00.25[/COLOR][/B]
- Removed TheOath Metadata dependency - can now be safely uninstalled
- Changed TV shows search API call from Trakt to TMDb

[B][COLOR gold]v4.00.24[/COLOR][/B]
- Fixed "Play from here" Kodi's context menu item not appearing on Kodi 19

[B][COLOR gold]v4.00.23[/COLOR][/B]
- Fixed some issues with cache-ing under py3
- Fixed minor source counting issue

[B][COLOR gold]v4.00.22[/COLOR][/B]
- Fixed sources messed-up order

[B][COLOR gold]v4.00.21[/COLOR][/B]
- Fixed unfiltered sources sneaking into pre-emptive results
- Removed unsupported scraper language settings

[B][COLOR gold]v4.00.20[/COLOR][/B]
- Fixed Library source not appearing when "Primal sorting parameter" is set to Premium

[B][COLOR gold]v4.00.19[/COLOR][/B]
- Source info parsing tweaks

[B][COLOR gold]v4.00.18[/COLOR][/B]
- Movie lists cleanup

[B][COLOR gold]v4.00.17[/COLOR][/B]
- Added alternate option to sort source results by Premium primarily and then by resolution
- Other minor changes to source sort/filtering functions

[B][COLOR gold]v4.00.16[/COLOR][/B]
- Stop labeling episode sources as cam/scr quality
- Other internal changes

[B][COLOR gold]v4.00.15[/COLOR][/B]
- Added missing artwork types on episodes lists
- Partial re-arrangement of how TV shows metadata are handled

[B][COLOR gold]v4.00.14[/COLOR][/B]
- Local language artwork fixes

[B][COLOR gold]v4.00.13[/COLOR][/B]
- Fixed issue with personal Trakt lists failing to load if sorted by release date
    and some list item(s) has no release date on Trakt database
- Other minor fixes

[B][COLOR gold]v4.00.12[/COLOR][/B]
- Fixed Trakt episodes history thumbnails
- Fixed issues with log viewing/uploading

[B][COLOR gold]v4.00.11[/COLOR][/B]
- Fixed de-accent scraping title in Kodi 19
